# gcp-phone-automation

./: .gitignore  README.md  deploy.py  export.py  main.py  pyproject.toml  requirements.txt  schedule.py
adhoc/: location_map.py
src/: adhoc.py  export.py  location.py
